--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 html, body{
+    width: 99%;
     height: 99%;
   }
   
@@ -12,4 +13,37 @@ html, body{
 
   .img{
     width: 75%;
-}
+  }
+
+  * {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+    font-family: sans-serif;
+  }
+
+  h1 {
+    bottom: 20px;
+    position: absolute;
+    font-size: clamp(2px, 1.5vw, 12px);
+    width: relative;
+  }
+
+  #typewriter {
+    color: #ffa406;
+    font-weight: bold;
+  }
+
+  #cursor {
+    color: #ffa406;
+    animation: blink 1s linear infinite;
+  }
+
+  @keyframes blink {
+    0% {
+      opacity: 100%;
+    }
+    50% {
+      opacity: 0%;
+    }
+  }
