--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 html, body{
-    width: 99%;
-    height: 99%;
+    width: 99.99%;
+    height: 99.99%;
   }
   
 .container{
@@ -14,6 +14,60 @@ html, body{
   .img{
     width: 75%;
   }
+  
+  :root {
+    --radius: 15px;
+    --light: #F9EEF6;
+    --pink: #FA99E1;
+    --dark: #8B7285;
+    --blue: #4B8AF3;
+    --transition: all 200ms cubic -bezier(0.74, 0.01, 0.39, 0.96);
+  }
+
+  .audio_player {
+    background-color: var(--light);
+    box-shadow: 0px 1px 5px #ffa305;
+    border-radius: var(--radius);
+    margin: -5rem auto 0;
+    padding: .5rem 1rem;
+    position: absolute;
+    bottom: 20px;
+    right: 10px;
+    display: grid;
+    grid-template-columns: auto;
+    place-items: center;
+    grid-gap: 1rem;
+    transition: var(--transition);
+  }
+
+  .audio_player.playing {
+    border-radius: var(--radius) var(--radius);
+  }
+
+  .playxpause{
+    background-color: #ffa305;
+    font-size: clamp(18px, 5.5vw, 30px);
+    display: grid;
+    place-items: center;
+    cursor: pointer;
+    border-radius: 10%;
+  }
+
+  .audio_player:is(:hover) {
+    .playxpause {
+      background-color: #4B8AF3;
+      outline: none;
+      transition: var(--transition);
+    }
+    background-color: var(--pink);
+    box-shadow: 0px 1px 20px #FA99E1;
+    transition: var(--transition);
+  }
+  
+  #img_button{
+    color: white;
+
+  }
 
   * {
     padding: 0;
@@ -25,7 +79,7 @@ html, body{
   h1 {
     bottom: 20px;
     position: absolute;
-    font-size: clamp(2px, 1.5vw, 12px);
+    font-size: clamp(2px, 2.5vw, 12px);
   }
 
   #typewriter {
